--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -123,13 +123,14 @@
   <%# 商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
+    <%= link_to '新規投稿商品', "#" , class: "subtitle" %>
     <ul class='item-lists'>
 
       <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to items_path(item.id) do %>
         <div class='item-img-content'>
+        
           <%= image_tag item.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
@@ -141,10 +142,10 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= "item.name" %>
+            <%= item.name %>
           </h3>
           <div class='item-price'>
-            <span><%= "item.price" %>円<br>(税込み)</span>
+            <span><%= item.price %>円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
@@ -155,8 +156,7 @@
       </li>
       <% end %>
 
-      <%# 商品がない場合のダミー %>
-      <% unless @items.present? %>
+      <% unless @items.presence %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -175,7 +175,6 @@
         <% end %>
       </li>
       <% end %>
-      <%# /商品がない場合のダミー %>
     </ul>
   </div>
   <%# /商品一覧 %>
