--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,7 +28,7 @@
        <p class='or-text'>or</p>
        <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
     <% end %>
-    <% if user_signed_in? && current_user.id != item.user.id %>
+    <% if user_signed_in? && current_user.id != @item.user.id %>
     <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
     <% end %>
 
@@ -94,7 +94,7 @@
     <%= link_to '＜ 前の商品', "#",  class="change-item-btn" %>
     <%= link_to '後ろの商品 ＞', "#",  class="change-item-btn" %>
   </div>
-  <%= link_to "商品のカテゴリー名をもっと見る", "#", class: 'another-item' %>
+  <%= link_to "#{@item.category.name}をもっと見る", "#", class: 'another-item' %>
 </div>
 
 <%= render "shared/footer" %>
