--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,7 @@
       <%= @item.name %>
     </h2>
     <div class='item-img-content'>
-      <%= image_tag item.image ,class:"item-box-img" %>
+      <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
@@ -16,10 +16,10 @@
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥ <% @item.price %>
+        ¥ <%= @item.price %>
       </span>
       <span class="item-postage">
-        (税込) 送料込み
+        (税込) 送料については下記参照
       </span>
     </div>
 
@@ -29,17 +29,17 @@
        <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
     <% end %>
     <% if user_signed_in? && current_user.id != @item.user.id %>
-    <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+       <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
     <% end %>
 
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @item.description %></span>
     </div>
     <table class="detail-table">
       <tbody>
         <tr>
           <th class="detail-item">出品者</th>
-          <td class="detail-value"><%= @item.user.name %></td>
+          <td class="detail-value"><%= @item.user.nickname %></td>
         </tr>
         <tr>
           <th class="detail-item">カテゴリー</th>
@@ -91,10 +91,14 @@
     </form>
   </div>
   <div class="links">
-    <%= link_to '＜ 前の商品', "#",  class="change-item-btn" %>
-    <%= link_to '後ろの商品 ＞', "#",  class="change-item-btn" %>
+      <a href="#" class="change-item-btn">
+      ＜ 前の商品
+    </a>
+    <a href="#" class="change-item-btn">
+      後ろの商品 ＞
+    </a>
   </div>
-  <%= link_to "#{@item.category.name}をもっと見る", "#", class: 'another-item' %>
+  <a href="#" class='another-item'><%= "商品のカテゴリー名" %>をもっと見る</a>
 </div>
 
 <%= render "shared/footer" %>
