--- a/app/views/order/index.html.erb
+++ b/app/views/order/index.html.erb
@@ -31,6 +31,8 @@
     </div>
     <%# /支払額の表示 %>
 
+    <%= render 'shared/error_messages', model: @purchase %>
+
     <%= form_with model: @purchase, url: item_purchases_path, id: 'charge-form',  class: 'transaction-form-wrap',local: true do |f| %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
@@ -103,7 +105,7 @@
           <label class="form-text">番地</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field 'hoge', class:"input-default", id:"addresses", placeholder:"例）青山1-1-1"%>
+        <%= f.text_field :address, class:"input-default", id:"addresses", placeholder:"例）青山1-1-1"%>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
